--- a/Web.Statu/Views/Home/KIndex.Porovnat.cshtml
+++ b/Web.Statu/Views/Home/KIndex.Porovnat.cshtml
@@ -112,53 +112,51 @@
                     }
                 </tr>
                 <!--
-                <tr>
-                    <td>
-                        Druh účetní jednotky
-                    </td>
-                    @foreach (var ki in Model)
-                    {
-                        <td>
-                            <b>@ki.UcetniJednotka.DruhUcetniJednotkyPopis()</b>
-                        </td>
-                    }
-                </tr>
-                <tr>
-                    <td>
-                        Forma účetní jednotky
-                    </td>
-                    @foreach (var ki in Model)
-                    {
-                        <td>
-                            <b>@ki.UcetniJednotka.FormaUcetniJednotkyPopis()</b>
-                        </td>
-                    }
-                </tr>
-                <tr>
-                    <td>
-                        Institucionální sektor
-                    </td>
-                    @foreach (var ki in Model)
-                    {
-                        <td>
-                            <b>@ki.UcetniJednotka.InstitucionalniSektorPopis()</b>
-                        </td>
-                    }
-                </tr>
-                    -->
+    <tr>
+        <td>
+            Druh účetní jednotky
+        </td>
+        @foreach (var ki in Model)
+        {
+            <td>
+                <b>@ki.UcetniJednotka.DruhUcetniJednotkyPopis()</b>
+            </td>
+        }
+    </tr>
+    <tr>
+        <td>
+            Forma účetní jednotky
+        </td>
+        @foreach (var ki in Model)
+        {
+            <td>
+                <b>@ki.UcetniJednotka.FormaUcetniJednotkyPopis()</b>
+            </td>
+        }
+    </tr>
+    <tr>
+        <td>
+            Institucionální sektor
+        </td>
+        @foreach (var ki in Model)
+        {
+            <td>
+                <b>@ki.UcetniJednotka.InstitucionalniSektorPopis()</b>
+            </td>
+        }
+    </tr>
+        -->
                 <tr>
                     <td>
                         Celkový počet smluv
                     </td>
                     @foreach (var ki in Model)
                     {
+                        val = ki.ForYear(rok).Smlouvy.Pocet;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:black">
-                                    @HlidacStatu.Util.RenderData.NiceNumber(ki.ForYear(rok).Smlouvy.Pocet)
-                                </span>
-                            }
+                            <span style="color:black">
+                                @HlidacStatu.Util.RenderData.NiceNumber(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -168,14 +166,11 @@
                     </td>
                     @foreach (var ki in Model)
                     {
-
+                        val = ki.ForYear(rok).Smlouvy.CelkemCena;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:black">
-                                    @HlidacStatu.Util.RenderData.NicePrice(ki.ForYear(rok).Smlouvy.CelkemCena, shortFormat: true)
-                                </span>
-                            }
+                            <span style="color:black">
+                                @HlidacStatu.Util.RenderData.NicePrice(val, shortFormat: true)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -184,19 +179,17 @@
                     <td>
                         Počet smluv bez<br />uvedené ceny
                     </td>
+                    @{
+                        min = Model.Min(m => m.ForYear(rok).Statistika.NumBezCeny);
+                        max = Model.Max(m => m.ForYear(rok).Statistika.NumBezCeny);
+                    }
                     @foreach (var ki in Model)
                     {
+                        val = ki.ForYear(rok).Statistika.NumBezCeny;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                min = Model.Min(m => m.ForYear(rok).Statistika.NumBezCeny);
-                                max = Model.Max(m => m.ForYear(rok).Statistika.NumBezCeny);
-                                val = ki.ForYear(rok).Statistika.NumBezCeny;
-
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NiceNumber(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NiceNumber(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -204,18 +197,17 @@
                     <td>
                         % smluv bez<br />uvedené ceny
                     </td>
+                    @{
+                        min = Model.Min(m => m.ForYear(rok).Statistika.PercentBezCeny);
+                        max = Model.Max(m => m.ForYear(rok).Statistika.PercentBezCeny);
+                    }
                     @foreach (var ki in Model)
                     {
+                        val = ki.ForYear(rok).Statistika.PercentBezCeny;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                min = Model.Min(m => m.ForYear(rok).Statistika.PercentBezCeny);
-                                max = Model.Max(m => m.ForYear(rok).Statistika.PercentBezCeny);
-                                val = ki.ForYear(rok).Statistika.PercentBezCeny;
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -231,12 +223,9 @@
                     {
                         val = ki.ForYear(rok).Statistika.PercentSPolitiky;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -253,12 +242,9 @@
                     {
                         val = ki.ForYear(rok).PercNovaFirmaDodavatel;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -274,12 +260,9 @@
                     {
                         val = ki.ForYear(rok).PercSeZasadnimNedostatkem;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
 
@@ -296,12 +279,9 @@
                     {
                         val = ki.ForYear(rok).PercSmlouvySPolitickyAngazovanouFirmou;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }|
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -317,12 +297,9 @@
                     {
                         val = ki.ForYear(rok).PercSmluvUlimitu;
                         <td>
-                            @if (ki.ForYear(rok) != null)
-                            {
-                                <span style="color:@(grad.Color(val, min, max).ToHex())">
-                                    @HlidacStatu.Util.RenderData.NicePercent(val)
-                                </span>
-                            }
+                            <span style="color:@(grad.Color(val,min,max).ToHex())">
+                                @HlidacStatu.Util.RenderData.NicePercent(val)
+                            </span>
                         </td>
                     }
                 </tr>
@@ -378,24 +355,24 @@
                     @foreach (var ki in Model)
                     {
                         val = ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny?.Herfindahl_Hirschman_Index ?? 0;
-                        <td>
-                            @if (ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny != null)
-                            {
-                                <span>
-                                    @(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.PocetSmluv)/@(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.PocetSmluvBezCeny)/
-                                    za @HlidacStatu.Util.RenderData.ShortNicePrice(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.CelkovaHodnotaSmluv)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index)
-                                </span>
-                            }
-                        </td>
+                <td>
+                    @if (ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny != null)
+                    {
+                        <span>
+                            @(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.PocetSmluv)/@(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.PocetSmluvBezCeny)/
+                            za @HlidacStatu.Util.RenderData.ShortNicePrice(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.CelkovaHodnotaSmluv)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index)
+                        </span>
+                    }
+                </td>
                     }
                 </tr>
                 <tr>
@@ -408,24 +385,24 @@
                     @foreach (var ki in Model)
                     {
                         val = ki.ForYear(rok).KoncentraceDodavateluCenyULimitu?.Herfindahl_Hirschman_Index ?? 0;
-                        <td>
-                            @if (ki.ForYear(rok).KoncentraceDodavateluCenyULimitu != null)
-                            {
-                                <span>
-                                    @(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.PocetSmluv)/@(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.PocetSmluvBezCeny)/
-                                    za @HlidacStatu.Util.RenderData.ShortNicePrice(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.CelkovaHodnotaSmluv)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Index)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified)
-                                </span>
-                                <span style="color:@(gradIndex.Color(val).ToHex())">
-                                    <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Kwoka_Dominance_Index)
-                                </span>
-                            }
-                        </td>
+                <td>
+                    @if (ki.ForYear(rok).KoncentraceDodavateluCenyULimitu != null)
+                    {
+                        <span>
+                            @(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.PocetSmluv)/@(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.PocetSmluvBezCeny)/
+                            za @HlidacStatu.Util.RenderData.ShortNicePrice(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.CelkovaHodnotaSmluv)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Index)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Herfindahl_Hirschman_Modified)
+                        </span>
+                        <span style="color:@(gradIndex.Color(val).ToHex())">
+                            <br />@HlidacStatu.Util.RenderData.NicePercent(ki.ForYear(rok).KoncentraceDodavateluCenyULimitu.Kwoka_Dominance_Index)
+                        </span>
+                    }
+                </td>
                     }
                 </tr>
                 <tr>
