--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -132,8 +132,8 @@
             <a href="/texty/o-serveru">O nás</a>
             <a href="/texty/vize">Naše vize</a>
             <a href="/texty/kodex">Náš kodex</a>
-            <a href="/texty/o-registru">O registru smluv</a>
             <a href="/texty/kontakt">Kontakt</a>
+            <a href="/texty/pro-media">Pro média, loga</a>
         </div>
         <div class="footer__content__gap"></div>
         <div class="footer__content__col">
