--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -246,13 +246,8 @@
                         <a href="/manage/Watchdogs"
                            alt="Všichni uložení hlídači" title="Všichni uložení hlídači"
                            onclick="ga('send', 'event', 'btnWatchDog', 'List', 'authenticated');" role="button"
-                           class="btn btn-warning btn-sm" style="
-    padding-left: 5px;
-    padding-right: 5px;
-    display:block
-">
+                           class="btn btn-warning btn-sm" style="padding-left: 5px;padding-right: 5px;display:block">
                             <i style="color:black;" class="fas fa-eye"></i>
-
                         </a>
 
                         <a style="display:block;color:#c9302c;" title="Všechny uložené záložky" alt="Všechny uložené záložky" href="/manage/zalozky" class="bookmark bookmarkOn"></a>
