--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -115,7 +115,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
             </div>
             <div class="block-col">
                 <div>
-                    Ve spolupráci s Rekonstrukcí státu hlídáme, kolik stát <b>skutečně</b> vyplatil na podpoře podnikatelům.
+                    Ve spolupráci s Rekonstrukcí státu hlídáme, kolik stát <b>skutečně</b> vyplatil na podpoře podnikatelům z peněz daňových poplatníků.
                 </div>
             </div>
 
